--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -5,7 +5,7 @@ jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
     steps:
-      - name: echp a string
+      - name: echo a string
         run: echo "Hellow World"
       - name: Multiline Command
         run: |
